# docpilot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/: ai-integration-implementation.md  cli-documentation.md  e2e-testing-guide.md  makefile-guide.md  session-persistence-recovery.md  shell-integration-guide.md
scripts/: run_e2e_tests.sh
src/: main.rs
src/filter/: command.rs  command.test.rs  mod.rs
src/llm/: analyzer.rs  client.rs  config.rs  error_handler.rs  integration_tests.rs  mod.rs  prompt.rs
src/output/: codeblock.rs  markdown.rs  markdown.test.rs  markdown_formatting_demo.test.rs  mod.rs
src/session/: manager.rs  mod.rs
src/terminal/: mod.rs  monitor.rs  monitor.test.rs  platform.rs
tests/: e2e_usability_test.rs
