[package]
name = "docpilot"
version = "0.3.0"
edition = "2025"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
nix = "0.27"
libc = "0.2"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
hostname = "0.3"
rand = "0.8"
dirs = "5.0"
whoami = "1.4"

[dev-dependencies]
tempfile = "3.0"
